--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "config": "^3.3.6",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.0",
