--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
+  "author": "Shushu Chen",
   "scripts": {
     "start": "node ./node_modules/nodemon/bin/nodemon.js ./bin/www",
-    "deploy-build": "cd my-world-map-front && yarn install && yarn run build"
+    "deploy-build": "cd my-world-map-front && yarn install && yarn run build",
+    "heroku-postbuild": "YARN_CONFIG_PRODUCTION=false yarn install --prefix my-world-map-front && yarn build --prefix my-world-map-front"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
