--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node ./node_modules/nodemon/bin/nodemon.js ./bin/www",
     "deploy-build": "cd my-world-map-front && yarn install && yarn run build",
-    "heroku-postbuild": "YARN_CONFIG_PRODUCTION=false yarn install --prefix my-world-map-front && yarn run build --prefix my-world-map-front"
+    "heroku-postbuild": "YARN_PRODUCTION=false yarn install --prefix my-world-map-front && yarn run build --prefix my-world-map-front"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
