added api, frontend link

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "author": "Shushu Chen",
   "scripts": {
-    "start": "node ./node_modules/nodemon/bin/nodemon.js ./bin/www",
+    "start": "node ./node_modules/nodemon/bin/nodemon.js ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
