--- a/my-world-map-front/package.json
+++ b/my-world-map-front/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
     "use-places-autocomplete": "^1.10.0",
     "web-vitals": "^1.0.1"
   },
