--- a/my-world-map-front/package.json
+++ b/my-world-map-front/package.json
@@ -12,9 +12,11 @@
     "bootstrap": "5.1.3",
     "browserslist": "^4.18.1",
     "date-fns": "^2.25.0",
+    "google-map-react": "^2.1.10",
     "http-proxy-middleware": "^2.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
